# aura

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  README_MERCHANT_ONBOARDING.md  TEST_PLAN.md  auth.config.ts  cloudflare-tunnel.yml  env.production.example  middleware.ts  next.config.js  nginx.conf  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: agent-release.yml  backend-ci.yml  backend-deploy.yml  backend-release.yml  build-installer.yml  build_installer.yml  ci.yml  main.yml  payment_monitoring.yml  vercel-prod.yml
app/: globals.css  layout.tsx  page.tsx  tailwind.config.js
app/admin/: page.tsx
app/api/register/: route.ts
app/api/resources/: route.ts
app/components/: AuthProvider.tsx  ClientHeaderWrapper.tsx  Header.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
aura-p2p/: Cargo.toml  README.md
aura-p2p/src/: config.rs  lib.rs  signaling.rs
aura-p2p/tests/: signaling_test.rs
deploy/kubernetes/: ocr-deployment.yaml
docs/: MERCHANT_GUIDE.md  PLAYER_GUIDE.md  TLS_SETUP.md  deployment.md  openapi.yaml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/components/: ReceiptUpload.tsx
frontend/pages/api/: verify-receipt.ts
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: ocr.d.ts
grafana/alerts/: payment_alerts.yml
grafana/dashboards/: payment_metrics.json
installer/: AuraSetup.iss  test_installer.ps1
lib/: prisma.ts
merchant-agent/: Cargo.toml
merchant-agent/src/: main.rs
monitoring/: ocr-prometheus.yml
prisma/: schema.prisma  seed.ts
prisma/migrations/20250705222114_init_user_model/: migration.sql
prisma/migrations/20250706134202_add_compute_resource/: migration.sql
prisma/migrations/20250706135359_add_session_model/: migration.sql
prisma/migrations/20250706140323_change_to_tenge/: migration.sql
prisma/migrations/20250709150423_init/: migration.sql
rust-backend/: Cargo.toml  Dockerfile  Dockerfile.ocr  aura.db  healthcheck.sh  test_receipt.txt
rust-backend/.cargo/: config.toml
rust-backend/aura-p2p/: Cargo.toml
rust-backend/aura-p2p/src/: lib.rs
rust-backend/config/: p2p.toml  p2p_node2.toml  prod.toml  sunshine.conf  tls.toml  windows_vm_test.toml
rust-backend/crates/signaling/: Cargo.toml
rust-backend/crates/signaling/src/: lib.rs  message.rs
rust-backend/deploy/: aura-backend.service
rust-backend/docs/: P2P_API.md  P2P_API_NEW.md  WEBRTC_INTEGRATION.md
rust-backend/migrations/: 20250715070428_create_accounts_table.sql  20250716100100_init.sql  202507170200_create_pending_topups.sql  20250717120000_add_session_status.sql
rust-backend/scripts/: check-deps.sh  setup_release_env.sh
rust-backend/src/: admin.rs  autoscaling.rs  billing.rs  docs.rs  enterprise.rs  funnels.rs  lib.rs  machine_rating.rs  machine_state.rs  main.rs  models.rs  p2p.rs  player_client.rs  referrals.rs  roi_calculator.rs  streamers.rs  wasm.rs
rust-backend/src/api/: auth.rs  billing.rs  core.rs  mod.rs  ocr.rs  p2p.rs  payment.rs  tests.rs
rust-backend/src/api/handlers/: sqlite.rs
rust-backend/src/auth/: mod.rs
rust-backend/src/billing/: metrics.rs  mod.rs
rust-backend/src/handlers/: payment.rs
rust-backend/src/middleware/: auth.rs  cors.rs  rate_limit.rs  rbac.rs  security.rs
rust-backend/src/models/: admin.rs  auth.rs  billing.rs  payment.rs  roles.rs
rust-backend/src/models/auth/: account_provider.rs  auth_error.rs  auth_service.rs  role.rs
rust-backend/src/payments/: mod.rs  service.rs
rust-backend/src/services/: account_provider.rs  mod.rs  secret_manager.rs
rust-backend/src/signaling/: mod.rs
rust-backend/src/streaming/: moonlight.rs
rust-backend/src/wasm/: mod.rs
rust-backend/tests/: api.rs  billing_test.rs  integration_test.rs  ocr_integration_test.rs  p2p_api_test.rs  p2p_api_test.rs.bak  p2p_integration.rs  payment_tests.rs  session.rs  signaling_test.rs
scripts/: aura-backend.service  closeExpiredSessions.ts  closeInactiveSessions.ts  deploy_ocr.sh  dev.js  install.ps1  seed.ts  smoke_test_ocr.sh  update.ps1
src/: middleware.ts  next-auth.d.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/games/: page.tsx
src/app/instructions/: page.tsx
src/app/machines/: page.tsx
src/app/merchant/: layout.tsx  page.tsx
src/app/reset-password/: page.tsx
src/app/servers/: page.tsx
src/components/: ContactSection.tsx  ContentBlockEditor.tsx  FAQSection.tsx  Footer.tsx  GameCard.tsx  GamesCarousel.tsx  GamesCatalog.tsx  Header.tsx  HeroSection.tsx  HowItWorksSection.tsx  ImageUploadField.tsx  MachineBrowser.tsx  MachineCard.tsx  MachineCatalog.tsx  MachineForm.tsx  MachinesCarousel.tsx  MerchantDashboard.tsx  NewHeader.tsx  PlayerDashboard.tsx  SessionDetailsModal.tsx  Skeleton.tsx  ToastContext.tsx  WithdrawBlock.tsx
src/components/admin/: AdminContentPanel.tsx  AdminDashboard.tsx  AdminPanel.tsx  AdminUsersPanel.tsx  GameForm.tsx  (+3 more)
src/lib/: authOptions.ts  generateMachineId.ts  rateLimit.ts  sendEmail.ts
src/types/: session.ts
tests/: kaspi_receipt.txt
tests/integration/: notification_test.rs  ocr_test.rs
(+64 files in other folders)
