[package]
name = "aura-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.56", features = ["tcp", "yamux", "noise", "ping", "identify", "macros"], default-features = false }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["full", "rt", "rt-multi-thread", "macros"] }
futures = "0.3"
libp2p-webrtc-websys = { version = "0.1", features = ["websys"] }
